--- a/glc_home.html
+++ b/glc_home.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="menu-bar">
             <div class="GLC_Logo">
-                <img src="https://cdn.discordapp.com/attachments/1295205145143017472/1295205213052862564/GLC_logo2.png?ex=670dcd5a&is=670c7bda&hm=9a979688a1f1f17a286d4fa2baeca165112ee78fc4956f75932b6bbd115cc324&" alt="GLC Logo" width="100" height="100">
+                <img src="https://raw.githubusercontent.com/SaladGrens/GLCWebsite/refs/heads/main/resources/GLC_logo2.png" alt="GLC Logo" width="100" height="100">
             </div>
             <br><br>
             <a href="glc_home.html" class="menu-button">Home</a>
