Update and rename glc_home.html to main.html

--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
             <br><br>
             <a href="glc_home.html" class="menu-button">Home</a>
             <a href="glc_about.html" class="menu-button">About</a>
-            <a href="glc_news-announcemnt" class="menu-button">News and Announcement</a>
-            <a href="glc_helpcenter" class="menu-button">Help Center</a>
+            <a href="glc_news-announcemnt.html" class="menu-button">News and Announcement</a>
+            <a href="glc_helpcenter.html" class="menu-button">Help Center</a>
             <p>Waling-waling Street, Barangay 177, Camarin, Caloocan City.<br>Tel : 961-5836<br>Email: goldenlink2002@gmail.com</p>
         </nav>
         <div class="glcmain">
