--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
                 <img src="https://raw.githubusercontent.com/SaladGrens/GLCWebsite/refs/heads/main/resources/GLC_logo2.png" alt="GLC Logo" width="100" height="100">
             </div>
             <br><br>
-            <a href="glc_home.html" class="menu-button">Home</a>
+            <a href="main.html" class="menu-button">Home</a>
             <a href="glc_about.html" class="menu-button">About</a>
             <a href="glc_news-announcemnt.html" class="menu-button">News and Announcement</a>
             <a href="glc_helpcenter.html" class="menu-button">Help Center</a>
