--- a/glc_about.html
+++ b/glc_about.html
@@ -13,10 +13,10 @@
                 <img src="https://raw.githubusercontent.com/SaladGrens/GLCWebsite/refs/heads/main/resources/GLC_logo2.png" alt="GLC Logo" width="100" height="100">
             </div>
             <br><br>
-            <a href="glc_home.html" class="menu-button">Home</a>
+            <a href="index.html" class="menu-button">Home</a>
             <a href="glc_about.html" class="menu-button">About</a>
-            <a href="glc_news-announcemnt" class="menu-button">News and Announcement</a>
-            <a href="glc_helpcenter" class="menu-button">Help Center</a>
+            <a href="glc_news-announcemnt.html" class="menu-button">News and Announcement</a>
+            <a href="glc_helpcenter.html" class="menu-button">Help Center</a>
             <p>Waling-waling Street, Barangay 177, Camarin, Caloocan City.<br>Tel : 961-5836<br>Email: goldenlink2002@gmail.com</p>
         </nav>
         <div class="glcabout">
@@ -108,8 +108,14 @@
               <ul>
                   <li> Regular activities are organized and implemented as support for clubs and organizations with the guidance of the school. The students are motivated to explore their talents, and collaborate with others without the spirit of competition. <br><br></li>     
                 </ul>
-                <br>
                <br>
+               <br>
+
+               <h1> ACTIVITIES </h1>,<br>
+               <h2> FREE EXPRESSION OF ART, CREATIVITY & LEADERSHIP;<br><br></h2>
+               <p> Clubs and Groups are organized as safe spaces for self-expression. Regular activities are organized and implemented as support for clubs and organizations with the guidance of the school. The students are motivated to explore their talents, and collaborate with others without the spirit of competition. </p>
+               <br>
+
                <hr>
                <br>
                <br>
