--- a/glc_helpcenter.html
+++ b/glc_helpcenter.html
@@ -5,6 +5,7 @@
             Golden Link College
         </title>
         <link rel="stylesheet" href="glchome.css">
+        <link rel="stylesheet" href="glcweb.css">
     </head>
     <body>
         <nav class="menu-bar">
@@ -18,13 +19,23 @@
             <a href="glc_helpcenter.html" class="menu-button">Help Center</a>
             <p>Waling-waling Street, Barangay 177, Camarin, Caloocan City.<br>Tel : 961-5836<br>Email: goldenlink2002@gmail.com</p>
         </nav>
-        <div class="glcmain">
-            <h1>
-                <span class= "white-text"> BE <br> THE <br> BEST<br>THAT</span> <br>
-                <span class= "highlighted-text">YOU<br>CAN <br> BE.
-            </h1>
-        </div>
-        <div class="homecontent">
-            <h3><i>Golden Link College Foundation</i> is a non-profit institution that gives importance to academic excellence, life skills and character development.</h3>
+        <div class="glchcenter">
+            <h1> HELP CENTER </h1>
+            <br>
+            <br>
+            <h2> ADDRESS OF SCHOOLS </h2>  
+            <p> Waling Waling Street, Along Dona Aurora Road, Camarin Caloocan City.</p>
+             <h2> CONTACT INFORMATIONS </h2>
+             <p> Tel. no: (02) 8961-5836 / 09952967459  </p>
+           <p> FB: https://www.facebook.com/goldenlinkcollege</p>
+            <p> EMAIL: goldenlink2002@gmail.com </p>
+            <br>
+            <br>
+            <h2> COMMITMENT OF THE SCHOLARS</h2>
+            <ul>
+            <li> STEWARDSHIP </li>
+            <li> MAINTAINING GRADES </li>
+            <li> ATTENDING REQUIRED EVENTS AND PROGRAMS </li>
+            </ul>       
         </div>
 </html>
